# night-amplifier

./: .gitignore  AGENTS.md  Cargo.toml  Cross.toml  README.md  build.rs  deny.toml  docker-compose.telemetry.yml  licenses.txt  otel-collector-config.yaml  package-lock.json  prometheus.yml  scratch.rs
.github/workflows/: ci.yml  release.yml
benches/: background_benchmark.rs  debayer_benchmark.rs  disk_writer_benchmark.rs  encoding_benchmark.rs  render_benchmark.rs  warp_benchmark.rs
scripts/: build-appimage.sh  build-dist.sh
src/: app.rs  error.rs  ffi_safety.rs  lib.rs  license.rs  logging.rs  main.rs  process.rs
src/background/: config.rs  extractor.rs  mod.rs  model.rs
src/calibration/: builders.rs  dark.rs  flat.rs  mod.rs  pipeline.rs  simd.rs
src/camera/: error.rs  indi_stub.rs  mod.rs  playerone_stub.rs  qhy_stub.rs  registry.rs  traits.rs  types.rs  types_tests.rs  zwo_stub.rs
src/camera/indi/: camera.rs  mod.rs  provider.rs
src/camera/playerone/: capture.rs  ffi_types.rs  mod.rs  properties.rs  sdk.rs  sensor_mode.rs  shim.rs
src/camera/qhy/: ffi_types.rs  mod.rs  sdk.rs  shim.rs  tests.rs
src/camera/simulated/: camera.rs  mod.rs  probe.rs  registry.rs
src/camera/zwo/: ffi_types.rs  mod.rs  props.rs  sdk.rs  shim.rs  tests.rs  utils.rs
src/debayer/: detection.rs  mod.rs  pattern.rs
src/debayer/algorithms/: bilinear.rs  mod.rs  vng.rs
src/detection/: adaptive.rs  background.rs  config.rs  detector.rs  mod.rs  star.rs
src/disk_writer/: config.rs  error.rs  handle.rs  mod.rs  utils.rs  worker.rs
src/fits/: header.rs  metadata.rs  mod.rs  writers.rs
src/frame/: factory.rs  format.rs  mod.rs  ops.rs
src/indi/: client.rs  connection.rs  device.rs  error.rs  fits_decoder.rs  mod.rs  xml.rs
src/planetary/: alignment.rs  config.rs  mod.rs  quality.rs  stacker.rs
src/planetary/tests/: alignment.rs  common.rs  mod.rs  quality.rs  stacker.rs
src/push_to/: download.rs  error.rs  mod.rs  progress.rs
src/registration/: adaptive.rs  config.rs  engine.rs  matcher.rs  mod.rs  ransac.rs  transform.rs  triangle.rs
src/render/: black_point.rs  black_point_tests.rs  mod.rs  simd.rs  white_balance.rs
src/render/autostretch/: config.rs  logic.rs  mod.rs  solver.rs  stats.rs
src/render/output/: contrast.rs  dither.rs  mod.rs  sampling.rs
src/render/pipeline/: config.rs  mod.rs
src/render/stretch/: asinh.rs  mod.rs  mtf.rs  saturation.rs
src/ser/: color_id.rs  header.rs  mod.rs  reader.rs  writer.rs
src/server/: dto.rs  embedded_assets.rs  encoding.rs  error.rs  events.rs  mod.rs  settings_persistence.rs  settings_persistence_tests.rs  util.rs  ws.rs
src/server/api/: about.rs  cameras.rs  capabilities.rs  capture.rs  indi.rs  install.rs  mod.rs  push_to.rs  settings.rs  simulator.rs
src/server/capture/: channel.rs  (+7 more)
src/stacking/: comet_plugin.rs  config.rs  incremental_pixel.rs  mod.rs  pipeline.rs  quality_limits.rs  stack.rs  stack_tests.rs  stacker.rs
src/statistics/: channel.rs  compute.rs  config.rs  image.rs  mod.rs  ops.rs
src/telemetry/: metrics.rs  mod.rs  tracing.rs
tests/: README.md  integration_pipeline.rs  pro_gating_test.rs
tests/integration/: background_tests.rs  common.rs  debayer_tests.rs  detection_tests.rs  encoding_tests.rs  fixture_processing.rs  image_loading.rs  mod.rs  prefetch.rs  stacking_tests.rs  stretch_tests.rs
web/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.js
web/src/: App.vue
(+116 files in other folders)
