[package]
name = "night_amplifier"
version = "0.1.0"
edition = "2021"
authors = ["Night Amplifier Contributors"]
description = "Professional-grade EAA (Electronically Assisted Astronomy) live stacking engine"
license-file = "LICENSE"
publish = false
readme = "README.md"

[lib]
name = "night_amplifier"
path = "src/lib.rs"

[[bin]]
name = "night_amplifier"
path = "src/main.rs"

[dependencies]
thiserror = "2.0.18"
rayon = "1.11.0"
wide = "1.1.1"  # SIMD abstractions for performance-critical code
nalgebra = "0.34.1"  # Linear algebra for RBF background extraction
async-trait = "0.1.86"

# Optional: Player One camera support (high-level safe API)
playerone-sdk = { version = "0.2.2", optional = true }

# Optional: ZWO ASI camera support
cameraunit_asi = { version = "4.1.0", optional = true }
cameraunit = { version = "5.1.0", optional = true }

# Web server dependencies
axum = { version = "0.8.8", features = ["ws"] }
tokio = { version = "1.50.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["fs", "cors"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

# FITS file support for astronomical image storage
fitsio = "0.21.9"

# Date/time formatting for session directories
chrono = "0.4.44"

# Logging
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }
tracing-appender = "0.2.4"

# OpenTelemetry (optional, enabled by default in debug builds)
opentelemetry = { version = "0.31.0", optional = true }
opentelemetry_sdk = { version = "0.31.0", features = ["rt-tokio"], optional = true }
opentelemetry-otlp = { version = "0.31.0", features = ["grpc-tonic"], optional = true }
opentelemetry-semantic-conventions = { version = "0.31.0", optional = true }
tracing-opentelemetry = { version = "0.32.1", optional = true }

# Image encoding for streaming
image = { version = "0.25.9", default-features = false, features = ["jpeg"] }

# LZ4 compression for high-quality RGB16 streaming
lz4_flex = "0.12.0"

# Image file format support for simulated camera
tiff = "0.11.3"
png = "0.18.1"
zune-png = "0.5.2"

# ASTAP installer dependencies
reqwest = { version = "0.12", default-features = false, features = ["stream", "rustls-tls", "cookies"] }
futures-util = "0.3.32"
zip = "8.2.0"
regex = "1.12.3"
urlencoding = "2.1.3"

[features]
default = ["playerone", "zwo"]
playerone = ["playerone-sdk"]
zwo = ["cameraunit_asi", "cameraunit"]
# OpenTelemetry support - enabled by default in debug builds via cfg
telemetry = ["opentelemetry", "opentelemetry_sdk", "opentelemetry-otlp", "opentelemetry-semantic-conventions", "tracing-opentelemetry"]

[dev-dependencies]
criterion = "0.8.2"
tiff = "0.11.3"        # TIFF file reading
fitsio = "0.21.9"     # FITS file reading (astronomy format)
tempfile = "3.26.0"   # For creating temporary test outputs
image = "0.25.9"      # General image handling for test output
tower = "0.5.3"       # For server endpoint testing (ServiceExt::oneshot)
serial_test = "3.4.0" # Run integration tests sequentially

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.release-pi]
inherits = "release"
opt-level = "s"  # Optimize for size on Pi

[[bench]]
name = "debayer_benchmark"
harness = false

[[bench]]
name = "warp_benchmark"
harness = false

[[bench]]
name = "background_benchmark"
harness = false
